--- a/index.html
+++ b/index.html
@@ -5,9 +5,88 @@
   <meta name="google-adsense-account" content="ca-pub-4620965208829694">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4620965208829694"
      crossorigin="anonymous"></script>
-  <title>Hello Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Michael's Game Dev</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #f0f2f5, #d4e0f0);
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2.8em;
+      color: #333;
+      margin-bottom: 0.3em;
+    }
+
+    p {
+      font-size: 1.2em;
+      color: #444;
+      max-width: 600px;
+      padding: 0 1em;
+      margin-bottom: 2em;
+    }
+
+    a.button {
+      display: inline-block;
+      padding: 12px 24px;
+      background-color: #4a90e2;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 8px;
+      transition: background-color 0.3s;
+    }
+
+    a.button:hover {
+      background-color: #357ab8;
+    }
+
+    footer {
+      margin-top: 3em;
+      font-size: 0.9em;
+      color: #666;
+    }
+
+    .ad-container {
+      margin-top: 2em;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello</h1>
+
+  <h1>Michael's Game Development</h1>
+  <p>I'm working on a bunch of games right now — lots of ideas, lots in development! Check out <strong>Dot Dot</strong>, one of my active projects, and keep an eye out for more updates soon.</p>
+
+  <a class="button" href="https://mrobi12.github.io/dotdot" target="_blank">Play Dot Dot</a>
+
+  <!-- Optional Ad container -->
+  <div class="ad-container">
+    <!-- You can paste an AdSense ad unit here later -->
+    <!-- Example placeholder:
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-4620965208829694"
+         data-ad-slot="YOUR_SLOT_ID"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    -->
+  </div>
+
+  <footer>
+    © 2025 Michael Robinson • All rights reserved
+  </footer>
+
 </body>
 </html>
