--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       margin-top: 2em;
     }
   </style>
+  <script type='text/javascript' src='//pl27043262.profitableratecpm.com/01/7b/85/017b8503523c6296a3c4ecaf252078bc.js'></script>
 </head>
 <body>
 
