--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
   <p>I'm working on a bunch of games right now — lots of ideas, lots in development! Check out <strong>Dot Dot</strong>, one of my active projects, and keep an eye out for more updates soon.</p>
 
   <a class="button" href="https://mrobi12.github.io/dotdot" target="_blank">Play Dot Dot</a>
-
+<script async="async" data-cfasync="false" src="//pl27043290.profitableratecpm.com/26f71998809bd80e82864caf3ec04b3b/invoke.js"></script>
+<div id="container-26f71998809bd80e82864caf3ec04b3b"></div>
   <!-- Optional Ad container -->
   <div class="ad-container">
     <!-- You can paste an AdSense ad unit here later -->
