--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
 
   <h1>Michael's Game Development</h1>
   <p>I'm working on a bunch of games right now — lots of ideas, lots in development! Check out <strong>Dot Dot</strong>, one of my active projects, and keep an eye out for more updates soon.</p>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '7ca1304cf6c2209bb79eded730d42f09',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/7ca1304cf6c2209bb79eded730d42f09/invoke.js"></script>
 
   <!-- Optional Ad container -->
   <div class="ad-container">
