--- a/index.html
+++ b/index.html
@@ -89,6 +89,6 @@
   <footer>
     © 2025 Michael Robinson • All rights reserved
   </footer>
-
+<script type="text/javascript"> var infolinks_pid = 3437811; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
